Revert "Prevent step message overflow"
This reverts commit 5ca39b751e8fd6316ad49bc79a150d462772f68e.

We need to allow overflow in order for the arrows to show.

--- a/styles/getting-started/_getting-started-message.scss
+++ b/styles/getting-started/_getting-started-message.scss
@@ -62,7 +62,6 @@ $getting-started-message-color: $dark-100;
   font-family: $font-family-sans-serif;
   font-size: $font-size-xs;
   box-shadow: 0 1px 10px 1px $dark-50;
-  overflow: hidden;
   &:before {
     content: '';
     position: absolute;
